--- a/web-reactjs-npm/package.json
+++ b/web-reactjs-npm/package.json
@@ -4,7 +4,9 @@
   "description": "FriendlyChat modulized",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack --watch",
+    "start": "browser-sync --port 4000 start --server --files \"**/*.html\" \"build/**/*.css\" \"build/**/*.js\" "
   },
   "repository": {
     "type": "git",
@@ -21,15 +23,21 @@
     "browser-sync": "^2.13.0",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "firebase": "^3.1.0",
+    "material-ui": "^0.15.2",
+    "react": "^15.2.1",
+    "react-dom": "^15.2.1",
+    "react-tap-event-plugin": "^1.0.0",
+    "reactfire": "^1.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1"
   },
   "dependencies": {
     "firebase": "^3.1.0",
-    "material-ui": "^0.15.1",
+    "material-ui": "^0.15.2",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
-    "react-toolbox": "^1.0.1",
+    "react-tap-event-plugin": "^1.0.0",
     "reactfire": "^1.0.0"
   }
 }
